--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script src="https://kit.fontawesome.com/aead5e1701.js" crossorigin="anonymous"></script>
     <!-- Begin Mailchimp Signup Form -->
-  <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+  <!-- <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"> -->
   <style type="text/css">
     #mc_embed_signup {
       background: #fff;
@@ -93,7 +93,7 @@
           <div class="subheading mb-5">London, UK · Porto, Portugal · Thailand</div>
 
           <!-- Begin Mailchimp Signup Form -->
-          </style>
+          <!-- </style>
           <div id="mc_embed_signup" class="col-lg-6 col-sm-6 col-xs-12 shadow rounded mx-auto mb-3">
             <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
@@ -101,25 +101,22 @@
               <div id="mc_embed_signup_scroll text-justify">
                 <label for="mce-EMAIL">Subscribe to my mailing list & get a FREE ebook with 30 Open Source tips</label>
                 <input type="email" value="" name="EMAIL" class="email col-md-12 mb-2 rounded" id="mce-EMAIL" placeholder="Email Address" required>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
                     tabindex="-1" value=""></div>
                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
               </div>
             </form>
-          </div>
+          </div> -->
 
           <!--End mc_embed_signup-->
           <div class="content text-justify col-lg-10 col-sm-10">
-            <p class="lead mb-5 ">
-            Passionate for #opensource #code #github #remote #startup & #inclusion. In recent years I have trended on GitHub with the likes of Twitter, Facebook, Angular etc and was in the top 500 open source contributors in the world. As a senior software engineer, the more I learn, the more I realise how much I still need to learn.
-          </p>
-          <p class="lead mb-5">Founder of <a href="https://dashboardhub.io" target="_blank">dashboardhub.io</a>, open-source platform that makes your deployment pipeline more transparent by ensuring everybody on your team is on the same page. DashboardHub does this by gathering the most relevant, up-to-date information, like what version is on what stage and build/deployment durations. your virtual release assistant. Also check out our twitter page <a href = "https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>.</p>
+            <p class="mb-5 ">Website moved to <a href="http://eddiejaoude.io">http://eddiejaoude.io</a></p>
+          <!-- <p class="lead mb-5">Founder of <a href="https://dashboardhub.io" target="_blank">dashboardhub.io</a>, open-source platform that makes your deployment pipeline more transparent by ensuring everybody on your team is on the same page. DashboardHub does this by gathering the most relevant, up-to-date information, like what version is on what stage and build/deployment durations. your virtual release assistant. Also check out our twitter page <a href = "https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>.</p>
           <p class="lead mb-5">Subscribe to my <a href="https://www.youtube.com/eddiejaoude" target="_blank">YouTube channel</a> if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
-          <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p>
+          <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p> -->
 
           </div>
-          
+
           <div class="social-icons">
             <a href="https://www.youtube.com/eddiejaoude" target="_blank">
                 <i class="fab fa-youtube"></i>
@@ -319,7 +316,7 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="subscriptionModal" tabindex="-1" role="dialog" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="subscriptionModal" tabindex="-1" role="dialog" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -329,30 +326,26 @@
             </button>
           </div>
           <div class="modal-body">
-            <!-- Begin Mailchimp Signup Form -->
             </style>
             <div id="mc_embed_signup" class="border-0">
               <form action="https://dashboardhub.us17.list-manage.com/subscribe/post?u=0f390eebc68ad563bffc5926a&amp;id=822dee9e0e"
                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
                 novalidate>
                 <div id="mc_embed_signup_scroll">
-                  <!-- <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
                   <input type="email" value="" name="EMAIL" class="email rounded" id="mce-EMAIL" placeholder="Email Address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0f390eebc68ad563bffc5926a_822dee9e0e"
                       tabindex="-1" value=""></div>
                   <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </div>
               </form>
             </div>
-            <!--End mc_embed_signup-->
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
